# movies

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  conanfile.txt
idl/: movie_info.idl  movie_info.widl  movie_info_cpp.widl  movie_info_py3.widl
inc/io/: file.hpp
inc/movies/: db_info.hpp  diff.hpp  fwd.hpp  image_url.hpp  loader.hpp  movie_info.hpp  opt.hpp  types.hpp
src/: db_info.cpp  diff.cpp  difflib.hpp  io.cpp  loader.cpp  movie_info.cpp
src/movie_info/: impl.cpp  impl.hpp  impl_array.inl  impl_translatable.inl  movie_info.cpp  offline_images.cpp  person_info.hpp
src/py3/: converter.cpp  converter.hpp  module.cpp
tools/: gen-api.py  py3-mod.py
tools/widl/model/: WidlClass.py  WidlExtAttribute.py
tools/widl/parser/: __init__.py  types.py
tools/widl/printers/: common.py  tmplt.py
tools/widl/printers/cpp/: __init__.py  code.mustache  code.py  common.py  header.mustache  header.py  order.py
tools/widl/printers/python/: __init__.py  code.mustache  code_impl.mustache  pyi.mustache
